# crap-todos

./: .gitignore  .luarc.json  README.md  crap.toml  docker-compose.yml  init.lua
access/: admin_only.lua  anyone.lua  authenticated.lua  author_or_admin.lua  self_or_admin.lua
collections/: categories.lua  comments.lua  media.lua  tasks.lua  users.lua
frontend/: Cargo.toml  Dockerfile  build.rs  tailwind.config.js
frontend/proto/: content.proto
frontend/src/: app.rs  generated.rs  generated_proto.rs  grpc.rs  lib.rs  main.rs  prelude.rs  sse.rs  types.rs
frontend/src/api/: auth.rs  comments.rs  helpers.rs  lookups.rs  mod.rs  tasks.rs
frontend/src/app/: icons.rs  pages.rs
frontend/src/app/components/: comments.rs  detail_panel.rs  error_state.rs  header.rs  live.rs  mod.rs  shared.rs  task_card.rs
frontend/src/app/pages/: board.rs  login.rs  trash.rs
globals/: app_settings.lua
hooks/: auto_slug.lua  check_overdue.lua  trim_title.lua
migrations/: 20260412000000_seed.lua
