[package]
name = "crap-todos-frontend"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Leptos
leptos = { version = "0.8", features = [] }
leptos_axum = { version = "0.8", optional = true }
leptos_router = { version = "0.8", features = [] }
leptos_meta = { version = "0.8", features = [] }

# Server
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs"], optional = true }

# gRPC client (server-side only)
tonic = { version = "0.14", optional = true }
tonic-prost = { version = "0.14", optional = true }
prost = "0.14"
prost-types = "0.14"

# Utilities
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
http = "1"
futures = "0.3"
async-stream = { version = "0.3", optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# WASM
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
web-sys = { version = "0.3", optional = true, features = ["EventSource", "MessageEvent"] }

[features]
hydrate = [
    "leptos/hydrate",
    "wasm-bindgen",
    "console_error_panic_hook",
    "web-sys",
]
ssr = [
    "leptos/ssr",
    "leptos_axum",
    "axum",
    "tokio",
    "tower",
    "tower-http",
    "tonic",
    "tonic-prost",
    "async-stream",
    "tracing-subscriber",
]

[build-dependencies]
tonic-prost-build = "0.14"

[package.metadata.leptos]
output-name = "crap-todos"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.css"
tailwind-input-file = "style/tailwind.css"
tailwind-config-file = "tailwind.config.js"
assets-dir = "public"
site-addr = "0.0.0.0:8080"
reload-port = 3001
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
browserquery = "defaults"
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
